--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ highlighter: rouge
 paginate: 10
 lsi: false
 quiet: false
-excerpt_separator: "\n\n"
+excerpt_separator: "。"
 permalink: /:year/:month/:day/:title/
 plugins:
     - jekyll-github-metadata
