--- a/_config.yml
+++ b/_config.yml
@@ -73,13 +73,13 @@ navs:
     href: /categories/
     label: 分类
 
-#   -
-#     href: /archives/
-#     label: 归档
+   -
+    href: /archives/
+    label: 归档
 
-#   -
-#     href: /open-source/
-#     label: 开源
+   -
+    href: /open-source/
+    label: 开源
 
   -
     href: /wiki/
