2023-1-16   docker 、正则、和yaml

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Shanghai
 encoding: "utf-8"
 # 页面左下角显示的年份
 since: 2015
-# 源码仓库，请替换成自己的
+# 源码仓库，
 repository: myxinyue/myxinyue.github.io
 # 对 css 和 js 资源的 cdn 加速配置
 cdn:
